[tool.poetry]
name = "lattice"
version = "0.1.0"
description = ""
authors = ["Big Ladder Software"]

[tool.poetry.dependencies]
python = "^3.6"
jsonschema = "*"
pyyaml = "*"
cbor2 = "*"
Jinja2 = "*"
stringcase = "1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
doit = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
