[tool.poetry]
name = "lattice"
version = "0.1.0"
description = ""
authors = ["Big Ladder Software"]

[tool.poetry.dependencies]
python = "^3.7"
jsonschema = "*"
pyyaml = "*"
cbor2 = "*"
Jinja2 = "*"
stringcase = "1.2.0"
GitPython = "3.1.18"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
doit = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
